Correct colour behind header tile

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -2,11 +2,10 @@
 // Add styles here to make changes without digging in too much
 
 // General styles
-$header-bg: #000 !default;
+//$header-bg: #000 !default;
 
 body > header {
-  background-image:url('/images/header.gif');
-  background-repeat:repeat-x;
+  background: #090909 image-url('/images/header.gif') repeat-x;
   h1 {
     display: inline-block;
     margin: 0;
